--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "mysql2": "^3.9.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
