Made LoginAPI.js
Also experimented adding mantine support as it makes forms easier. However, it messes with the theme made with tailwindCSS. So will not be adding that in (some of the changes made was from that testing).

Signed-off-by: FDIL <fdil.fadilh1@gmail.com>

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/app/components/*"],
-      "@test/*": ["./src/app/test/*"]
+      "@test/*": ["./src/app/test/*"],
+      "@login/*": ["./src/app/login/*"]
     }
   }
 }
