Made basic Client Create Account Form
Setup client create account form code structure.
Next step is to add backend and data validation.

Signed-off-by: FDIL <fdil.fadilh1@gmail.com>

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
       "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"],
       "@test/*": ["./src/app/test/*"],
-      "@login/*": ["./src/app/login/*"]
+      "@login/*": ["./src/app/login/*"],
+      "@CreateAccount/*": ["./src/app/[user]/CreateAccount/*"]
     }
   }
 }
