Fixed up createClientAccount
createClientAccount now forms as expected. Changed by generating 8 byte id within the server, instead of letting sql auto generate, then fetching it to create child rows.

Signed-off-by: FDIL <fdil.fadilh1@gmail.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
