Fixed bug with creating centre. Admin create account now works!
centre_id generated was out of range due to sql definition not being BIGINT UNSIGNED, it was just INT, meaning 4 bytes instead of 8 bytes which we generate.

Admin Create Account not extensively tested.

Signed-off-by: FDIL <fdil.fadilh1@gmail.com>

--- a/src/db/setup/config.json
+++ b/src/db/setup/config.json
@@ -1,7 +1,7 @@
 {
-    "host": "host_IP",
-    "user": "user",
+    "host": "localhost",
+    "user": "***REMOVED***",
     "***REMOVED***": "***REMOVED***",
-    "database": "database_name",
+    "database": "PetPursuit",
     "connectTimeout": 60000
 }
