--- a/src/db/setup/config.json
+++ b/src/db/setup/config.json
@@ -1,7 +1,7 @@
 {
-    "host": "host_IP",
-    "user": "user",
-    "password": "password",
-    "database": "database_name",
+    "host": "localhost",
+    "user": "root",
+    "password": "***REMOVED***",
+    "database": "PetPursuit",
     "connectTimeout": 60000
 }
