Remove db password
Signed-off-by: FDIL <fdil.fadilh1@gmail.com>

--- a/src/db/setup/config.json
+++ b/src/db/setup/config.json
@@ -1,7 +1,7 @@
 {
     "host": "localhost",
     "user": "root",
-    "password": "***REMOVED***",
+    "password": "password",
     "database": "PetPursuit",
     "connectTimeout": 60000
 }
