--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@heroicons/react": "^1.0.6",
     "mysql2": "^3.9.1",
     "net": "^1.0.2",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tls": "^0.0.1",
     "uniqid": "^5.4.0"
   },
