--- a/src/db/setup/config.json
+++ b/src/db/setup/config.json
@@ -1,7 +1,7 @@
 {
     "host": "localhost",
     "user": "root",
-    "password": "Yolo123$",
+    "password": "Hadith./24",
     "database": "PetPursuit",
     "connectTimeout": 60000
 }
