--- a/src/db/setup/config.json
+++ b/src/db/setup/config.json
@@ -1,7 +1,7 @@
 {
-    "host": "localhost",
-    "user": "root",
-    "password": "password",
-    "database": "PetPursuit",
-    "connectTimeout": 60000
+  "host": "localhost",
+  "user": "root",
+  "password": "Yolo123$",
+  "database": "PetPursuit",
+  "connectTimeout": 60000
 }
