--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@components/*": ["./src/components/*"],
       "@test/*": ["./src/app/test/*"],
       "@login/*": ["./src/app/login/*"],
-      "@CreateAccount/*": ["./src/app/[user]/CreateAccount/*"]
+      "@CreateAccount/*": ["./src/app/[user]/CreateAccount/*"],
+      "@BookAppointment/*": ["./src/app/BookAppointment/*"]
     }
   }
 }
