--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
       "@test/*": ["./src/app/test/*"],
       "@login/*": ["./src/app/login/*"],
       "@CreateAccount/*": ["./src/app/[user]/CreateAccount/*"],
-      "@BookAppointment/*": ["./src/app/BookAppointment/*"]
+      "@BookAppointment/*": ["./src/app/BookAppointment/*"],
+      "@about/*": ["./src/app/about/*"]
     }
   }
 }
