Refactor about/page.js
Make a new Component which is just the AboutContent.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,7 @@
       "@BrowseAppointments/*": ["./src/app/BrowseAppointments/*"],
       "@BookAppointment/*": ["./src/app/BookAppointment/*"],
       "@about/*": ["./src/app/about/*"],
+      "@about/*": ["./src/app/about/*"],
       "@BrowsePets/*": ["./src/app/BrowsePets/*"],
       "@ViewPet/*": ["./src/app/ViewPet/*"]
     }
