Add connection to db on google cloud
Also fixed image update statements to have correct Table name: pet -> Pet

--- a/src/db/setup/config.json
+++ b/src/db/setup/config.json
@@ -1,7 +1,7 @@
 {
-  "host": "localhost",
+  "host": "***REMOVED***",
   "user": "***REMOVED***",
-  "***REMOVED***": "***REMOVED***",
+  "***REMOVED***": "***REMOVED***401pet",
   "database": "PetPursuit",
-  "connectTimeout": 60000
+  "connectTimeout": 100000
 }
